Removes old service_types, adds sevice-types. Adds API doc
